# djangoProject5

djangoProject5/: awaiter.py  migrate.sh  nginx.conf  psql  pyproject.toml  requirements.txt  run.sh  urls.py  views.py  wsgi.py
djangoProject5/bot/: admin.py  bot.py  forms.py  keyboards.py  models.py  translete_callbacks.py
djangoProject5/settings/: development.py
