[tool.poetry]
name = "djangoproject5"
version = "0.1.0"
description = ""
authors = ["dolgovdaniil <dolgovdaniil007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
transliterate = "^1.10.2"
Django = "^4.1"
pyTelegramBotAPI = "^4.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
